
= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/qrtool
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.10.12\...v0.10.13[0.10.13] - 2024-06-29

=== Fixed

* Wrap long lines

== {compare-url}/v0.10.11\...v0.10.12[0.10.12] - 2024-06-29 [YANKED]

=== Added

* Add options to optimize output PNG image ({pull-request-url}/531[#531])

=== Changed

* Change the `encode` command to return an error if `--type` is `terminal` and
  the `--foreground` and/or `--background` options specify values ​​other than
  the default ({pull-request-url}/531[#531])

== {compare-url}/v0.10.10\...v0.10.11[0.10.11] - 2024-06-17

=== Added

* Add Arch Linux instructions ({pull-request-url}/509[#509])

== {compare-url}/v0.10.9\...v0.10.10[0.10.10] - 2024-04-25

=== Changed

* Allow input image formats other than PNG to be disabled
  ({pull-request-url}/457[#457])

== {compare-url}/v0.10.8\...v0.10.9[0.10.9] - 2024-04-18

=== Changed

* Change to remove unnecessary files from the book
  ({pull-request-url}/451[#451])

== {compare-url}/v0.10.7\...v0.10.8[0.10.8] - 2024-04-16

=== Changed

* Update examples in man pages

== {compare-url}/v0.10.6\...v0.10.7[0.10.7] - 2024-04-08

=== Changed

* Update copyright notice ({pull-request-url}/425[#425])

== {compare-url}/v0.10.5\...v0.10.6[0.10.6] - 2024-03-17

=== Changed

* Bump `image` to 0.25.0 ({pull-request-url}/408[#408])

== {compare-url}/v0.10.4\...v0.10.5[0.10.5] - 2024-02-18

=== Changed

* Bump MSRV to 1.74.0 ({pull-request-url}/383[#383])

== {compare-url}/v0.10.3\...v0.10.4[0.10.4] - 2024-01-21

=== Changed

* Add description about behavior of `-h`, `--help` and `--version` in man pages
  ({pull-request-url}/360[#360])
