@@ -4,7 +4,7 @@
 
 = qrtool-encode(1)
 // Specify in UTC.
-:docdate: 2024-06-29
+:docdate: 2024-07-02
 :doctype: manpage
 ifdef::revnumber[:mansource: qrtool {revnumber}]
 ifndef::revnumber[:mansource: qrtool]
@@ -155,9 +155,11 @@ ifdef::optimize-output-png,env-github,site-gen-antora[]
 endif::[]
 
 ifdef::optimize-output-png,env-github,site-gen-antora[]
-*--zopfli*::
+*--zopfli* [_ITERATION_]::
 
-  Use Zopfli to compress PNG image. This option requires *--optimize-png*.
+  Use Zopfli to compress PNG image. Performs compression for the number of
+  iterations specified by the value. If the value is not specified, it is
+  assumed that 15 is specified. This option requires *--optimize-png*.
 endif::[]
 
 *--mode* _MODE_::
